--- a/app/src/main/res/layout/item_timenote.xml
+++ b/app/src/main/res/layout/item_timenote.xml
@@ -154,24 +154,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <TextView
+        app:layout_constraintTop_toBottomOf="@id/timenote_vp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/colorAccentCustom"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:visibility="gone"
+        android:paddingVertical="4dp"
+        android:paddingHorizontal="8dp"
+        android:gravity="end"
+        android:fontFamily="sans-serif-light"
+        android:id="@+id/timenote_buy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 
     <ImageView
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
-        android:src="@drawable/ic_heart"
+        android:src="@drawable/ic_chat"
         android:id="@+id/timenote_like"
-        app:layout_constraintTop_toBottomOf="@id/timenote_vp"
+        app:layout_constraintTop_toBottomOf="@id/timenote_buy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <ImageView
-        android:src="@drawable/ic_chat"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
+        android:src="@drawable/ic_share"
+        android:layout_marginStart="8dp"
         android:id="@+id/timenote_comment"
         app:layout_constraintStart_toEndOf="@id/timenote_like"
-        app:layout_constraintTop_toBottomOf="@id/timenote_vp"
+        app:layout_constraintTop_toTopOf="@id/timenote_like"
+        app:layout_constraintBottom_toBottomOf="@id/timenote_like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -190,10 +205,10 @@
     <ImageView
         android:id="@+id/timenote_plus"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_add_circle_black_24dp"
-        app:layout_constraintTop_toBottomOf="@id/timenote_vp"
+        app:layout_constraintBottom_toBottomOf="@id/timenote_like"
+        app:layout_constraintTop_toTopOf="@id/timenote_like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
