--- a/app/src/main/res/layout/adapter_search_explore.xml
+++ b/app/src/main/res/layout/adapter_search_explore.xml
@@ -1,42 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
+<androidx.cardview.widget.CardView
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginTop="8dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
-        android:fontFamily="sans-serif-light"
         android:id="@+id/search_explore_category"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:paddingHorizontal="16dp"
-        android:paddingVertical="4dp"
+        android:paddingVertical="12dp"
         android:textSize="17sp"
         android:textColor="@color/colorText"
-        app:layout_constraintBottom_toBottomOf="@id/search_explore_divider"
         tools:text="CULTURE"
         android:textAllCaps="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <ImageView
-        app:layout_constraintBottom_toBottomOf="@id/search_explore_divider"
+        app:layout_constraintBottom_toBottomOf="@id/search_explore_category"
         android:id="@+id/search_explore_see_subcategory"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/search_explore_category"
         android:paddingHorizontal="16dp"
         android:paddingVertical="4dp"
         android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:layout_marginTop="4dp"
-        android:id="@+id/search_explore_divider"
-        app:layout_constraintTop_toBottomOf="@id/search_explore_category"
-        style="@style/AppTheme.Divider.Toolbar"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_explore_rv"
@@ -48,3 +47,4 @@
         android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
