--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -480,24 +480,14 @@
                     <TextView
                         android:visibility="gone"
                         android:fontFamily="sans-serif-light"
-                        android:id="@+id/create_timenote_paid_timenote_status_url"
-                        android:textColor="@color/colorText"
-                        android:textSize="14sp"
-                        android:layout_marginTop="8dp"
-                        app:layout_constraintTop_toBottomOf="@id/create_timenote_paid_timenote_status_no_answer"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                    <TextView
-                        android:visibility="gone"
-                        android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_paid_timenote_status_price"
                         android:textColor="@color/colorText"
                         android:textSize="14sp"
+                        tools:text="www.google.com"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:layout_marginTop="8dp"
-                        app:layout_constraintTop_toTopOf="@id/create_timenote_paid_timenote_status_url"
-                        app:layout_constraintBottom_toBottomOf="@id/create_timenote_paid_timenote_status_url"
+                        app:layout_constraintTop_toBottomOf="@id/create_timenote_paid_timenote_label"
                         app:layout_constraintStart_toStartOf="parent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
