--- a/app/src/main/res/layout/widget_collapsible_calendarview.xml
+++ b/app/src/main/res/layout/widget_collapsible_calendarview.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_root"
+    android:paddingTop="8dp"
+    android:paddingHorizontal="8dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
