--- a/app/src/main/res/layout/item_pref_filter_chip.xml
+++ b/app/src/main/res/layout/item_pref_filter_chip.xml
@@ -5,9 +5,11 @@
     android:layout_height="wrap_content"
     tools:text="Avec Alarme"
     android:layout_margin="4dp"
+    android:layout_gravity="center"
+    android:gravity="center"
     app:mcv_backgroundColor="@color/white"
     app:mcv_textColor="@android:color/black"
-    app:mcv_selectedTextColor="@color/colorPrimary"
+    app:mcv_selectedTextColor="@color/colorAccentCustom"
     app:mcv_selectedBackgroundColor="@android:color/white"
     app:mcv_strokeColor="@android:color/darker_gray"
     app:mcv_strokeSize="1dp"
