--- a/app/src/main/res/navigation/navigation_graph_tab_profile.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_profile.xml
@@ -23,14 +23,16 @@
             app:destination="@id/filterProfile" />
         <argument
             android:name="whereFrom"
-            app:argType="boolean"
-            android:defaultValue="false" />
+            app:argType="boolean" />
         <action
             android:id="@+id/action_profile_to_followPage"
             app:destination="@id/followPage" />
         <action
             android:id="@+id/action_profile_to_menu"
             app:destination="@id/menu" />
+        <action
+            android:id="@+id/action_profile_to_createTimenote"
+            app:destination="@id/createTimenote" />
     </fragment>
     <fragment
         android:id="@+id/profilModify"
@@ -80,5 +82,58 @@
         <action
             android:id="@+id/action_menu_to_settings"
             app:destination="@id/settings" />
+        <action
+            android:id="@+id/action_menu_to_preferenceCategory"
+            app:destination="@id/preferenceCategory" />
+        <action
+            android:id="@+id/action_menu_to_profile"
+            app:destination="@id/profile" />
     </fragment>
+    <fragment
+        android:id="@+id/preferenceCategory"
+        android:name="com.timenoteco.timenote.view.loginFlow.PreferenceCategory"
+        android:label="fragment_preference_category"
+        tools:layout="@layout/fragment_preference_category" >
+        <action
+            android:id="@+id/action_preferenceCategory_to_preferenceSubCategory"
+            app:destination="@id/preferenceSubCategory" />
+        <argument
+            android:name="isInLogin"
+            app:argType="boolean" />
+    </fragment>
+    <fragment
+        android:id="@+id/preferenceSubCategory"
+        android:name="com.timenoteco.timenote.view.loginFlow.PreferenceSubCategory"
+        android:label="fragment_preference_sub_category"
+        tools:layout="@layout/fragment_preference_sub_category" >
+        <action
+            android:id="@+id/action_preferenceSubCategory_to_preferenceSuggestion"
+            app:destination="@id/preferenceSuggestion" />
+        <argument
+            android:name="isInLogin"
+            app:argType="boolean" />
+    </fragment>
+    <fragment
+        android:id="@+id/preferenceSuggestion"
+        android:name="com.timenoteco.timenote.view.loginFlow.PreferenceSuggestion"
+        android:label="fragment_preference_suggestion"
+        tools:layout="@layout/fragment_preference_suggestion" >
+        <argument
+            android:name="isInLogin"
+            app:argType="boolean" />
+    </fragment>
+    <fragment
+        android:id="@+id/createTimenote"
+        android:name="com.timenoteco.timenote.view.createTimenoteFlow.CreateTimenote"
+        android:label="fragment_create_timenote"
+        tools:layout="@layout/fragment_create_timenote" >
+        <action
+            android:id="@+id/action_createTimenote_to_previewTimenoteCreated"
+            app:destination="@id/previewTimenoteCreated" />
+    </fragment>
+    <fragment
+        android:id="@+id/previewTimenoteCreated"
+        android:name="com.timenoteco.timenote.view.createTimenoteFlow.PreviewTimenoteCreated"
+        android:label="fragment_preview_timenote_created"
+        tools:layout="@layout/fragment_preview_timenote_created" />
 </navigation>
