--- a/app/src/main/res/layout/item_timenote.xml
+++ b/app/src/main/res/layout/item_timenote.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:flipTimer="http://schemas.android.com/apk/res-auto">
@@ -61,6 +62,7 @@
         android:layout_height="250dp"/>
 
     <TextView
+        android:background="@drawable/gradient_timenote_top"
         android:shadowDy="1"
         android:shadowDx="1"
         android:shadowRadius="1.5"
@@ -71,88 +73,86 @@
         android:fontFamily="sans-serif-light"
         android:textColor="@android:color/white"
         android:textAllCaps="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:paddingVertical="16dp"
+        android:paddingHorizontal="16dp"
         app:layout_constraintTop_toTopOf="@id/timenote_vp"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:shadowDy="1"
-        android:shadowDx="1"
-        android:shadowRadius="1.5"
-        android:shadowColor="@android:color/black"
-        android:layout_marginStart="104dp"
-        android:id="@+id/timenote_year"
-        android:text="2020"
-        android:fontFamily="sans-serif-light"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@id/separator_1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/separator_1"
-        app:layout_constraintTop_toTopOf="@id/separator_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/custom"
-        android:id="@+id/separator_1"
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintEnd_toStartOf="@id/timenote_day_month"
-        app:layout_constraintStart_toEndOf="@id/timenote_year"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_vp"
-        android:layout_width="2dp"
-        android:layout_height="48dp"/>
-
-    <TextView
-        android:shadowDy="1"
-        android:shadowDx="1"
-        android:fontFamily="sans-serif-light"
-        android:shadowRadius="1.5"
-        android:shadowColor="@android:color/black"
+    <LinearLayout
+        android:background="@drawable/gradient_timenote_bottom"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
         android:gravity="center"
-        android:id="@+id/timenote_day_month"
-        android:text="10Aug.\n15:45"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@id/separator_2"
-        app:layout_constraintStart_toEndOf="@id/separator_1"
-        app:layout_constraintBottom_toBottomOf="@id/separator_2"
-        app:layout_constraintTop_toTopOf="@id/separator_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/custom"
-        android:fontFamily="sans-serif-light"
-        android:id="@+id/separator_2"
-        app:layout_constraintEnd_toStartOf="@id/timenote_time"
-        app:layout_constraintStart_toEndOf="@id/timenote_day_month"
         app:layout_constraintBottom_toBottomOf="@id/timenote_vp"
-        android:layout_width="2dp"
-        android:layout_height="48dp"/>
-
-    <TextView
-        android:shadowDy="1"
-        android:shadowDx="1"
-        android:shadowRadius="1.5"
-        android:shadowColor="@android:color/black"
-        android:layout_marginEnd="104dp"
-        android:id="@+id/timenote_time"
-        android:text="11Aug.\n12:30"
-        android:fontFamily="sans-serif-light"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/separator_2"
-        app:layout_constraintTop_toTopOf="@id/separator_2"
-        app:layout_constraintBottom_toBottomOf="@id/separator_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:shadowDy="1"
+            android:shadowDx="1"
+            android:shadowRadius="1.5"
+            android:shadowColor="@android:color/black"
+            android:id="@+id/timenote_year"
+            android:layout_marginEnd="4dp"
+            android:text="2020"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:paddingHorizontal="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:background="@drawable/custom"
+            android:id="@+id/separator_1"
+            android:fontFamily="sans-serif-light"
+            android:layout_width="2dp"
+            android:layout_height="48dp"/>
+
+        <TextView
+            android:layout_marginHorizontal="4dp"
+            android:paddingHorizontal="4dp"
+            android:shadowDy="1"
+            android:shadowDx="1"
+            android:fontFamily="sans-serif-light"
+            android:shadowRadius="1.5"
+            android:shadowColor="@android:color/black"
+            android:gravity="center"
+            android:id="@+id/timenote_day_month"
+            android:text="10Aug.\n15:45"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:padding="2dp"
+            android:background="@drawable/custom"
+            android:fontFamily="sans-serif-light"
+            android:id="@+id/separator_2"
+            android:layout_width="2dp"
+            android:layout_height="48dp"/>
+
+        <TextView
+            android:layout_marginStart="4dp"
+            android:paddingHorizontal="4dp"
+            android:shadowDy="1"
+            android:shadowDx="1"
+            android:shadowRadius="1.5"
+            android:shadowColor="@android:color/black"
+            android:id="@+id/timenote_time"
+            android:text="11Aug.\n12:30"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
     <TextView
         app:layout_constraintTop_toBottomOf="@id/timenote_vp"
@@ -196,8 +196,8 @@
         app:ci_drawable_unselected="@drawable/dot_unselected"
         app:layout_constraintBottom_toBottomOf="@id/timenote_comment"
         app:layout_constraintTop_toTopOf="@id/timenote_comment"
-        app:layout_constraintEnd_toStartOf="@id/separator_2"
-        app:layout_constraintStart_toEndOf="@id/separator_1"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="parent"
         android:id="@+id/timenote_indicator"
         android:layout_width="wrap_content"
         android:layout_height="12dp"/>
